[package]
name = "jet-proto-math"
version = "1.1.0"
edition = "2021"

description = "A library of math helpers suitable for use in solana programs"
license = "AGPL-3.0-or-later"
homepage = "https://jetprotocol.io"
repository = "https://github.com/jet-lab/program-libraries"

[features]
number = ["bytemuck", "thiserror", "uint", "static_assertions"]
number-128 = ["bytemuck"]
traits = ["anchor-lang", "num-traits"]
fixed-point = []

[dependencies]
uint = { version = "0.9", optional = true }
thiserror = { version = "1.0.20", optional = true }
bytemuck = { version = "1.7", features = ["derive"], optional = true }
static_assertions = { version = "1.1.0", optional = true }

# Traits
num-traits = { version = "0.2", optional = true }
anchor-lang = { git = "https://github.com/jet-lab/anchor", optional = true, branch = "master" }
