[package]
name = "jet-proto-math"
version = "1.1.0"
edition = "2021"

description = "A library of math helpers suitable for use in solana programs"
license = "AGPL-3.0-or-later"
homepage = "https://jetprotocol.io"
repository = "https://github.com/jet-lab/program-libraries"

[features]
traits = ["anchor-lang", "num-traits"]

[dependencies]
uint = { version = "=0.9.1" }
thiserror = "1.0.20"
bytemuck = { version = "1.7", features = ["derive"] }
static_assertions = "1.1.0"

# Traits
num-traits = { version = "0.2", optional = true }
anchor-lang = { git = "https://github.com/jet-lab/anchor", optional = true, branch = "master" }
